# residents_request_platform

./: .cursorignore  README.md  docker-compose.yml  kafka_integration_691e3497.plan.md  pyproject.toml  resident_request_platform_68376e3a.plan.md
.cursor/agents/: reviewer.md
management-service/: Dockerfile  alembic.ini  requirements.txt
management-service/alembic/: env.py
management-service/alembic/versions/: 2026_04_11_2017-5e0115f8bfff_request_table.py  2026_04_11_2040-e12a0e740f83_request_table_v2.py
management-service/app/: config.py  database.py  main.py  models.py  repo.py  schemas.py  service.py
management-service/app/kafka/: consumer.py
management-service/app/routers/: requests.py
management-service/tests/unit/: conftest.py
request-service/: Dockerfile  alembic.ini  requirements.txt
request-service/alembic/: env.py
request-service/alembic/versions/: 2026_04_11_2018-1c104deebc48_request_table.py  2026_04_11_2041-fb1b000fc6b5_request_table_v2.py
request-service/app/: config.py  database.py  main.py  models.py  repo.py  schemas.py  service.py
request-service/app/kafka/: producer.py
request-service/app/routers/: requests.py
request-service/tests/: conftest.py
request-service/tests/unit_test/: test_request_service.py
