[project]
name = "resident-request-platform"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiokafka>=0.13.0",
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "fastapi>=0.135.3",
    "httpx>=0.28.1",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-mock>=3.15.1",
    "sqlalchemy[asyncio]>=2.0.49",
    "testcontainers[postgres]>=4.14.2",
    "uvicorn[standard]>=0.44.0",
]



[tool.pytest.ini_options]
asyncio_mode = "strict"
pythonpath = [
    "request-service",
    "management-service"
]